# kernel_helper

./: CMakeLists.txt  README.md  kernel_helper.c
data/: kernel.cl  out.txt  test_kernel.cl
docs/: INTERFACE.md
examples/: kernel.cl  out.txt
include/: convert_kernel.h  kernel_helper.h
src/: convert_kernel.c  kernel_helper.c
tests/: kernel_helper.test.c
